--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,11 @@
   "permissions": ["storage"],
   "browser_specific_settings": {
     "gecko": {
-      "id": "iniad-glassmorphism@local"
+      "id": "iniad-glassmorphism@local",
+      "data_collection_permissions": {
+        "required": ["none"],
+        "optional": []
+      }
     }
   },
   "content_scripts": [
